--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
-In 2023, That is my first repo and keep learning coding that's all.
+In 2023, That is my first repo and keep learning coding tbye.
+
+And I just update something txt right now 
